# timechaingrid

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
chain-tools/: README.md
chain-tools/deploy/: push_to_r2.sh
chain-tools/ingest/: extract_activity.py  extract_wallets.py  from_fixture.py  requirements.txt  significance_filter.py
chain-tools/lib/: chain.mjs  schemas.py
chain-tools/physics/: Cargo.toml
chain-tools/physics/src/: main.rs  spatial_index.rs
chain-tools/vault/: generate-grid.mjs  generate.mjs  validate.mjs
docs/: THREAT_MODEL.md  bitcoin-data-ingest.md  bitcoind-setup.md  cloudflare-deploy.md
functions/api/: tip.js
public/: status.json  treasury-status.json
scripts/: bake-treasury.mjs  copy-duckdb-assets.mjs  deploy.sh  dump-substrate.test.ts  gen-og-image.mjs  gen-x-avatar.mjs  gen-x-banner.mjs  privacy-audit.sh
src/app/: globals.css  layout.tsx  manifest.ts  robots.ts  sitemap.ts
src/components/: AccessTiers.tsx  BlockNarrative.tsx  BlockStats.tsx  DonateAddress.tsx  DonateLightning.tsx  HalvingTimeline.tsx  HeroFrame.tsx  HeroVisual.tsx  LiveStatus.tsx  LiveStatusBar.tsx  LiveTipPanel.tsx  Logo.tsx  MinerInspector.tsx  NavBar.tsx  Playback.tsx  PlayerLeaderboard.tsx  Scrubber.tsx  SiteFooter.tsx  SocialIcons.tsx  (+3 more)
(+82 files in other folders)
