[package]
name = "lattice-physics"
version = "0.0.1"
edition = "2021"
description = "Force-directed pre-baking of wallet positions for the Timechain Lattice viewer."
publish = false

[[bin]]
name = "lattice-physics"
path = "src/main.rs"

[dependencies]
arrow = "53"
parquet = "53"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
